--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,4 +26,5 @@
 @import "views/help";
 @import "views/tax-disc";
 @import "views/view-driving-licence";
+@import "views/register-sorn-statutory-off-road-notification";
 
